samples/_failures_safe/1761288191_04cd63_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a98b07dd.c: In function ‘main’:
./samples/SAFE/__tmp_a98b07dd.c:139:5: error: expected declaration or statement at end of input
  139 |     if (!compress_buffer(&input, &compressed)) {
      |     ^~
./samples/SAFE/__tmp_a98b07dd.c:139:5: error: expected declaration or statement at end of input
